updated about page, modified url.py (now compatible with django 1.10)

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>
-	This is the place for our manuals and howtos.
-	Enjoy!
-	Just html, not form DB
-</p>
+<div class="container">
+	<div class="jumbotron">
+		<p>
+			This is the place for our manuals and howtos.<br>
+			Enjoy!<br>
+			<em>Just html, not from DB</em>
+		</p>
+	</div>
+</div>
 {% endblock content %}
